--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1 style="background-color:Gray;">Gray</h1>
 <h1 style="background-color:SlateBlue;">SlateBlue</h1>
 <h1 style="background-color:Violet;">Violet</h1>
-<h1 style="background-color:LightGray;">LightGray</h1>
+<h1 style="background-color:LightGray;">Edit LightGray</h1>
 
 </body>
 </html>
