Change paragraph text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h1 style="background-color:SlateBlue;">SlateBlue</h1>
 <h1 style="background-color:Violet;">Violet</h1>
 <h1 style="background-color:LightGray;">Edit LightGray</h1>
-<p>This is experiment for auto build trigger</p>
+<p>not worked</p>
 </body>
 </html>
 
